--- a/src/blocks/page/page.scss
+++ b/src/blocks/page/page.scss
@@ -32,6 +32,7 @@
   -webkit-text-size-adjust: 100%; // stylelint-disable-line
   min-width: 320px;
   min-height: 100%;
+  font-size: 62.5%;
   scroll-behavior: smooth;
 
   &__inner {
@@ -42,22 +43,6 @@
 
   &__content {
     flex-grow: 1;
-
-    ol {
-      @include row-flex;
-      justify-content: center;
-    }
-
-    li {
-      @include col;
-      @include size(11);
-      @include size-sm(6);
-      @include size-xl(4);
-      @include size-xxl(3);
-
-      text-align: center;
-      background-color: #333;
-    }
   }
 
   &__footer-wrapper {
