--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -34,7 +34,7 @@ html(class='page no-js', lang=lang)
       //- GoogleFonts
       link(rel='preconnect', href='https://fonts.googleapis.com')
       link(rel='preconnect', href='https://fonts.gstatic.com', crossorigin)
-      link(href='https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500;600;700;800&family=Josefin+Slab:ital,wght@0,400;0,600;1,300;1,400;1,600&family=Mulish:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap', rel='stylesheet')
+      link(href='https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500;600;700;800&display=swap', rel='stylesheet')
       //- FontAwesome
       link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css')
 
