--- a/src/blocks/top-content/top-content.scss
+++ b/src/blocks/top-content/top-content.scss
@@ -6,6 +6,7 @@
 
   $block-name:                &; // #{$block-name}__element
 
+  position: relative;
   width: 100%;
   height: 65vh;
 
@@ -79,5 +80,47 @@
       background-position: center;
       background-size: cover;
     }
+  }
+
+  &__banner {
+    position: absolute;
+    top: 25%;
+    width: 100%;
+    text-align: center;
+  }
+
+  &__heading {
+    margin: 0;
+    margin-bottom: 3rem;
+
+    font-size: 6rem;
+    font-weight: 300;
+    color: #fff;
+  }
+
+  &__paragraph {
+    width: 50%;
+    margin: 0 auto;
+    margin-bottom: 4rem;
+
+    font-size: 1.8rem;
+    color: #fff;
+  }
+
+  &__banner-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 35rem;
+    height: 5rem;
+    margin: 0 auto;
+    border: none;
+    border-radius: 3rem;
+
+    font-size: 1.6rem;
+    font-weight: 600;
+    text-decoration: none;
+    color: #fff;
+    background-color: $accent-color;
   }
 }
