--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -34,6 +34,7 @@ $text-color-accent:           #d22856;
 $body-bg:                     $white;
 $body-bg-contrast:            $gray-lightest;
 
+$accent-color:                #036bb1;
 
 $link-color:                  $color-main;
 $link-color--hover:           darken($color-main, 15%);
