--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -17,12 +17,38 @@ block content
           | PayPal
 
         ul.navbar__list
-          li.navbar__list-item
+          li.navbar__list-item.navbar__list-item--hover
             a.navbar__list-link(href='#personal') Personal
               i.fas.fa-chevron-down
-          li.navbar__list-item
+            ul.navbar__dropdown
+              li.navbar__dropdown-item
+                a.navbar__dropdown-link.navbar__dropdown-link--1(href='#') How PayPal works
+                a.navbar__dropdown-link.navbar__dropdown-link--2(href='#') What can you do with a personal account
+              li.navbar__dropdown-item
+                a.navbar__dropdown-link.navbar__dropdown-link--1(href='#') Pay online
+                a.navbar__dropdown-link.navbar__dropdown-link--2(href='#') Online payment without borders
+              li.navbar__dropdown-item
+                a.navbar__dropdown-link.navbar__dropdown-link--1(href='#') Send payments
+                a.navbar__dropdown-link.navbar__dropdown-link--2(href='#') Send payments abroad
+              li.navbar__dropdown-item
+                a.navbar__dropdown-link.navbar__dropdown-link--1(href='#') Search for deals
+                a.navbar__dropdown-link.navbar__dropdown-link--2(href='#') Pay with PayPal and send money
+          li.navbar__list-item.navbar__list-item--hover
             a.navbar__list-link(href='#business') Business
               i.fas.fa-chevron-down
+            ul.navbar__dropdown
+              li.navbar__dropdown-item
+                a.navbar__dropdown-link.navbar__dropdown-link--1(href='#') All business solutions
+                a.navbar__dropdown-link.navbar__dropdown-link--2(href='#') See our range of products
+              li.navbar__dropdown-item
+                a.navbar__dropdown-link.navbar__dropdown-link--1(href='#') Accept online payments
+                a.navbar__dropdown-link.navbar__dropdown-link--2(href='#') Get paid on your website
+              li.navbar__dropdown-item
+                a.navbar__dropdown-link.navbar__dropdown-link--1(href='#') Send invoices
+                a.navbar__dropdown-link.navbar__dropdown-link--2(href='#') Create and email online invoices
+              li.navbar__dropdown-item
+                a.navbar__dropdown-link.navbar__dropdown-link--1(href='#') Sell internationally
+                a.navbar__dropdown-link.navbar__dropdown-link--2(href='#') PayPal supports your global growth
           li.navbar__list-item
             a.navbar__list-link(href='#personal') Partners and Developers
         ///.navbar__list
