--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -60,7 +60,31 @@ block content
 
     .top-content__banner
       h1.top-content__heading We've Got You Covered
-      p.top-content__paragraph Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum optio fugit rerum repellendus pariatur rem ratione corrupti atque adipisci aliquid possimus et facilis provident ullam.
+      p.top-content__paragraph Cliche health goth cardigan, kitsch venmo ramps hell of church-key deep v kickstarter dreamcatcher. DIY asymmetrical seitan synth pug polaroid man braid stumptown flannel four dollar toast +1 subway tile tote bag. Microdosing helvetica taiyaki hoodie.
       a.top-content__banner-btn.btn--blue(href='#') Learn More
     ///.top-content__banner
   ///.top-content
+
+  section.services#services
+    h2.services__heading PayPal is for everyone who pays or gets paid
+
+    .services__grid
+
+      .services__col
+        i.fas.fa-user-tie
+        h3.services__name Individuals
+        p.services__paragraph I'm baby irony pok pitchfork four dollar toast butcher la croix synth hella artisan gluten-free tbh.
+        a.services__btn(href='#') Learn More
+
+      .services__col
+        i.fas.fa-briefcase
+        h3.services__name Businesses
+        p.services__paragraph I'm baby pok pok +1 hoodie man bun skateboard pug raclette lumbersexual cold-pressed tofu aesthetic.
+        a.services__btn(href='#') Learn More
+
+      .services__col
+        i.fas.fa-handshake
+        h3.services__name Partners
+        p.services__paragraph I'm baby vegan cardigan pork belly, irony church-key readymade vexillologist retro gastropub wolf.
+        a.services__btn(href='#') Learn More
+  ///.services
