--- a/src/scss/mixins/smart-grid.scss
+++ b/src/scss/mixins/smart-grid.scss
@@ -8,7 +8,7 @@ $break_md: 768px;
 $break_sm: 480px;
 $break_xs: 0;
 
-$offset: 0;
+$offset: 2rem;
 $offset_xxl: $offset;
 $offset_xl: $offset;
 $offset_lg: $offset;
