--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -88,3 +88,33 @@ block content
         p.services__paragraph I'm baby vegan cardigan pork belly, irony church-key readymade vexillologist retro gastropub wolf.
         a.services__btn(href='#') Learn More
   ///.services
+
+  section.features#features
+    h2.features__title The world prefers PayPal
+
+    .features__grid
+
+      .features__col
+        h3.features__heading Advanced Protection
+        p.features__paragraph Iceland semiotics pinterest direct trade, plaid next level waistcoat dreamcatcher small batch taxidermy keytar church-key. Aesthetic 90's cronut woke heirloom, artisan organic vinyl umami flannel. Godard celiac PBR&B, taxidermy fashion axe hexagon hot chicken enamel pin.
+
+      .features__col
+        h3.features__heading Fast Payments
+        p.features__paragraph Chambray roof party chillwave four loko franzen distillery. Cred direct trade cray, gastropub coloring book 3 wolf moon messenger bag cold-pressed lumbersexual hashtag. Meditation gluten-free VHS, affogato etsy knausgaard 3 wolf moon fam tote bag thundercats meh leggings.
+
+      .features__col
+        h3.features__heading Global Reach
+        p.features__paragraph Cornhole kinfolk af live-edge twee, messenger bag adaptogen. Quinoa twee four dollar toast, live-edge adaptogen snackwave kickstarter letterpress taxidermy ramps cold-pressed raw denim trust fund kale chips. Literally butcher single-origin coffee forage fam.
+
+      .features__col
+        h3.features__heading Easy Integration
+        p.features__paragraph Chicharrones brunch enamel pin, mixtape vexillologist waistcoat aesthetic crucifix kombucha twee cold-pressed cronut mumblecore iPhone cred. Gastropub 8-bit microdosing four dollar toast keffiyeh, stumptown shabby chic umami drinking vinegar activated charcoal hell of
+
+      .features__col
+        h3.features__heading Simple and Convenient
+        p.features__paragraph Venmo fam tacos irony. Gluten-free intelligentsia authentic, VHS normcore taxidermy squid wayfarers direct trade gastropub bushwick. Subway tile austin truffaut, glossier normcore forage freegan four loko neutra affogato prism small batch vegan.
+
+      .features__col
+        h3.features__heading 24/7 Service
+        p.features__paragraph Whatever aesthetic pinterest snackwave mlkshk 8-bit. You probably haven't heard of them four loko humblebrag, green juice pok pok taxidermy locavore tilde raw denim tote bag truffaut fingerstache celiac franzen. Shoreditch ramps drinking vinegar trust fund.
+  ///.features
