--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -145,3 +145,43 @@ block content
           span.account__number 3
           span.account__text Kombucha kale chips tilde, gluten-free disrupt crucifix ramps poke forage sartorial edison bulb vaporware.
   ///.account
+
+  section.signup#signup
+    h2.signup__title Sign Up and Get Started
+    a.signup__btn.btn--blue(href='#') Get Started
+  ///.signup
+
+block footer
+  footer.page-footer
+    .page-footer__top
+
+      ul.page-footer__list
+        li.page-footer__list-item
+          a.page-footer__list-link(href='#') Help and Contact
+        li.page-footer__list-item
+          a.page-footer__list-link(href='#') Fees
+        li.page-footer__list-item
+          a.page-footer__list-link(href='#') Security
+        li.page-footer__list-item
+          a.page-footer__list-link(href='#') Features
+        li.page-footer__list-item
+          a.page-footer__list-link(href='#') Shop
+
+      ul.page-footer__list
+        li.page-footer__list-item
+          a.page-footer__list-link(href='#') English
+        li.page-footer__list-item
+          a.page-footer__list-link(href='#') Spanish
+        li.page-footer__list-item
+          a.page-footer__list-link(href='#') French
+        li.page-footer__list-item
+          a.page-footer__list-link(href='#') Italian
+        li.page-footer__list-item
+          a.page-footer__list-link(href='#')
+            img.page-footer__img(alt='Flag', width='100', src='img/flag.png')
+
+    ///.page-footer__top
+
+    .page-footer__bottom
+      p.page-footer__copyright Copyright &copy; All Rights Reserved
+  ///.page-footer
