--- a/src/blocks/btn/btn.scss
+++ b/src/blocks/btn/btn.scss
@@ -85,4 +85,21 @@
   //     // border-color: $color-main;
   //   }
   // }
+
+  &--blue {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 35rem;
+    height: 5rem;
+    margin: 0 auto;
+    border: none;
+    border-radius: 3rem;
+
+    font-size: 1.6rem;
+    font-weight: 600;
+    text-decoration: none;
+    color: #fff;
+    background-color: $accent-color;
+  }
 }
