--- a/src/blocks/logo/logo.scss
+++ b/src/blocks/logo/logo.scss
@@ -6,10 +6,27 @@
 
   $block-name:                &; // #{$block-name}__element
 
-  display: inline-block;
-  white-space: nowrap;
+  position: relative;
 
-  img {
-    display: block;
+  font-size: 3.5rem;
+  font-style: italic;
+  font-weight: 800;
+  color: #fff;
+
+  &__p1 {
+    position: relative;
+    z-index: 10;
+    margin-right: 1rem;
+
+    font-size: 4.5rem;
+  }
+
+  &__p2 {
+    position: absolute;
+    top: 0.4rem;
+    left: 0.5rem;
+
+    font-size: 4.5rem;
+    color: #bbb;
   }
 }
