--- a/src/blocks/login/login.scss
+++ b/src/blocks/login/login.scss
@@ -8,7 +8,8 @@
 
   @include wrapper-full;
 
-  display: flex;
+  // display: flex;
+  display: none;
   align-items: flex-start;
   height: 100vh;
 
