--- a/src/blocks/signup-page/signup-page.scss
+++ b/src/blocks/signup-page/signup-page.scss
@@ -6,8 +6,8 @@
 
   $block-name:                &; // #{$block-name}__element
 
+  display: none;
   height: 100vh;
-
   background: linear-gradient(to bottom, rgba(112, 112, 112, 0.9), rgba(255, 255, 255, 0.8) 10%);
 
   &__wrapper {
