--- a/src/blocks/navbar/navbar.scss
+++ b/src/blocks/navbar/navbar.scss
@@ -9,8 +9,12 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 120rem;
+  width: 100rem;
   height: 100%;
+
+  @media (min-width: 1400px) {
+    width: 120rem;
+  }
 
   &__wrapper {
     display: flex;
@@ -126,7 +130,7 @@
     width: 100%;
     height: 20rem;
     margin: 0;
-    padding: 0 30rem;
+    padding: 0 25rem;
 
     visibility: hidden;
     opacity: 0;
@@ -134,16 +138,28 @@
     transition: all 0.3s;
 
     background: linear-gradient(to right, #066399, #2f8fdf, #066399);
+
+    @media (min-width: 1500px) {
+      padding: 0 30rem;
+    }
   }
 
   &__dropdown-item {
     display: flex;
     flex-direction: column;
     width: 25rem;
-    margin: 2rem 10rem;
+    margin: 2rem 3.4rem;
 
     &:hover #{$block-name}__dropdown-link {
       color: #ddd;
+    }
+
+    @media (min-width: 1100px) {
+      margin: 2rem 5.5rem;
+    }
+
+    @media (min-width: 1500px) {
+      margin: 2rem 10rem;
     }
   }
 
