--- a/src/blocks/signup-page/signup-page.scss
+++ b/src/blocks/signup-page/signup-page.scss
@@ -7,8 +7,15 @@
   $block-name:                &; // #{$block-name}__element
 
   display: none;
-  height: 100vh;
-  background: linear-gradient(to bottom, rgba(112, 112, 112, 0.9), rgba(255, 255, 255, 0.8) 10%);
+  padding-bottom: 10rem;
+
+  background: linear-gradient(to bottom, rgba(112, 112, 112, 0.9), rgba(255, 255, 255, 0.8) 13%);
+
+  @media (min-width: 1400px) {
+    height: 100vh;
+    padding: 0;
+    background: linear-gradient(to bottom, rgba(112, 112, 112, 0.9), rgba(255, 255, 255, 0.8) 10%);
+  }
 
   &__wrapper {
     @include wrapper;
@@ -47,15 +54,23 @@
 
   &__content {
     @include row-flex;
+    justify-content: center;
   }
 
   &__left {
     @include col;
+    @include size-sm(8);
     @include size-xl(8);
 
-    border-right: 0.1rem solid #b1b1b1;
-    padding: 3rem;
-    padding-left: 0;
+    border-bottom: 0.1rem solid #b1b1b1;
+    text-align: center;
+
+    @media (min-width: 1200px) {
+      border-right: 0.1rem solid #b1b1b1;
+      border-bottom: unset;
+      padding: 3rem;
+      padding-left: 0;
+    }
   }
 
   &__images {
@@ -66,7 +81,7 @@
 
   &__img {
     width: 25%;
-    // margin-right: 5rem;
+    max-width: 18rem;
     border: 1.5rem solid #ccc;
     border-radius: 50%;
   }
@@ -80,11 +95,15 @@
 
   &__right {
     @include col;
+    @include size-sm(8);
     @include size-xl(4);
 
-    padding: 3rem;
-    padding-right: 0;
     color: #555;
+
+    @media (min-width: 1200px) {
+      padding: 3rem;
+      padding-right: 0;
+    }
 
     h3 {
       font-size: 2.4rem;
@@ -111,11 +130,16 @@
     margin: 1.5rem;
 
     [type='radio'] {
-      width: 30%;
+      width: 20%;
       height: 2rem;
       margin-top: 0.5rem;
-      margin-right: 1rem;
-      margin-left: -1.5rem;
+      margin-left: -3rem;
+
+      @media (min-width: 1200px) {
+        width: 30%;
+        margin-right: 1rem;
+        margin-left: -1.5rem;
+      }
     }
   }
 
