--- a/src/blocks/top-content/top-content.scss
+++ b/src/blocks/top-content/top-content.scss
@@ -8,7 +8,11 @@
 
   position: relative;
   width: 100%;
-  height: 65vh;
+  height: 70vh;
+
+  @media (min-width: 1400px) {
+    height: 65vh;
+  }
 
   @media (min-width: $screen-xs) {
     background: linear-gradient(to top, rgba(38, 38, 38, 0.7), rgba(38, 38, 38, 0.6)), url('../img/top-content-bg-01-640p.webp');
@@ -99,12 +103,16 @@
   }
 
   &__paragraph {
-    width: 50%;
+    width: 70%;
     margin: 0 auto;
     margin-bottom: 4rem;
 
     font-size: 1.8rem;
     color: #fff;
+
+    @media (min-width: 1400px) {
+      width: 50%;
+    }
   }
 
   &__banner-btn {
